--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ body {
 .results > h2 {
 	margin: 2rem auto;
 }
+
+.restart-btn {
+	margin: 2rem auto;
+	padding: 1rem;
+	font-weight: bold;
+	font-size: 1.5rem;
+	cursor: pointer;
+}
